--- a/src/components/FlickrGalleryItem/flickr_gallery_items.less
+++ b/src/components/FlickrGalleryItem/flickr_gallery_items.less
@@ -18,14 +18,20 @@
 
 	img {
 		display: block;
-		min-width: 100%;
-		min-height: 100%;
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
+		max-width: 100%;
+		max-height: 100%;
 	}
 }
+
+.image_link {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background: #c0c0c0;
+}
+
 
 .info {
 	overflow: hidden;
@@ -46,4 +52,50 @@
 	overflow: hidden;
 	width: 100%;
 	display: block;
+}
+
+// popup
+
+
+.popup {
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	background: fade(#000, 80%);
+	text-align: center;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.popup_in {
+	position: relative;
+	max-height: 80%;
+	max-width: 80%;
+	display: flex;
+}
+
+.popup_hide {
+	.popup();
+	position: absolute;
+	opacity: 0;
+	pointer-events: none;
+}
+
+.popup_show {
+	.popup();
+	position: fixed;
+	opacity: 1;
+	transition: opacity .6s;
+}
+
+.popup_close {
+	position: absolute;
+	color: #fff;
+	right: -4rem;
+	top: -4rem;
+	font-size: 4rem;
+	text-decoration: none;
 }
